# claude-code-orchestrate

./: README.md  pyproject.toml
claude_code_orchestrate/: __init__.py  client.py
docs/superpowers/plans/: 2026-04-01-claude-code-orchestrate.md  2026-04-01-context-api.md
super_orchestrate/: __init__.py  client.py  context.py  mcp_transport.py
tests/: test_agent.py  test_client.py  test_context.py  test_context_integration.py  test_ctx_import.py  test_frontmatter.py  test_grep_params.py  test_init.py  test_integration.py  test_parse.py  test_singleton.py  test_transport.py  test_transport_extended.py
